argocd-ingress.yaml
# argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd # Mijenjamo namespace u 'argocd'
  annotations:
    # Traefik preusmjerava s HTTP (port 80) na HTTPS (port 443)
    # Ovo je opcionalno, ali preporučeno
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
